--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
     "firebase": "9.6.6",
+    "razorpay": "^2.9.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "7.2.6",
